--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -68,7 +68,7 @@
     </ul>
 
     <div class="question"><br>
-        <form action = "" method = "post">
+        <form>
             <input type="button" onclick="suivant()" value="Suivant">
             <h1>Question :</h1>
             <b>
