--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -40,7 +40,7 @@
             elements3.setAttribute(hidden, false);
         }
         function quitter(){
-            emit('quitter');
+            emit('fermer_seq');
         }
     </script>
     <script>hljs.initHighlightingOnLoad()
