--- a/templates/sequence_eleve.html
+++ b/templates/sequence_eleve.html
@@ -19,6 +19,30 @@
             document.getElementById("desac").setAttribute(hidden,false)
         });
 
+        socket.on('nouvelle_q', (question) =>{
+            console.log(question.question["Question"])
+            console.log(Object.keys(question))
+            
+            document.getElementById("enonce").innerHTML=question.question["Question"]
+            document.getElementById("champs_reponses").innerHTML = ""
+            for (element of question.question["REP"]){
+                document.getElementById("champs_reponses").innerHTML = document.getElementById("champs_reponses").innerHTML +
+                    "<span class='REP' style='display: inline-block;'>"+element+"</span>"
+                    
+                if(question.question["BREP"].includes(element)){
+                    document.getElementById("champs_reponses").innerHTML = document.getElementById("champs_reponses").innerHTML +
+                    "<div class='BREP' hidden='true' style='display: none;'>"+element+"</div><br>"
+                }
+                else{
+                    document.getElementById("champs_reponses").innerHTML = document.getElementById("champs_reponses").innerHTML +
+                    "<div class='MREP' hidden='true' style='display: none;'>"+element+"</div><br>"
+                }
+            }
+            
+            console.log(question)
+            console.log('ok')
+        });
+
         function get_responses(){
         li_bonne_rep = document.getElementById("numero_load").innerHTML.split(",");
         for (element in li_bonne_rep){
@@ -38,7 +62,6 @@
             }
         }
         function envoi_rep(){
-            
             socket.emit('eleve_reponse_q', {'id_seq':"{{id_seq| safe}}"},reponse);
         }
         function quitter(){
@@ -63,9 +86,6 @@
             <ul class="sousMenu">
                 <li><a href="../">Accueil</a></li>
                 <li><a href="profil">Profil</a></li>
-                <li><a href="../BDD">Liste de vos questions</a></li>
-                <li><a href="../creationQuestion">Créer une question</a></li>
-                <li><a href="../creationFeuille">Créer une feuille d'exercices</a></li>
                 <li><a href="../deco">Se déconnecter</a></li>
             </ul>
         </li>
