changements sequence prof/eleve

--- a/templates/sequence_eleve.html
+++ b/templates/sequence_eleve.html
@@ -28,28 +28,18 @@
             for (element of question.question["REP"]){
                 document.getElementById("champs_reponses").innerHTML = document.getElementById("champs_reponses").innerHTML +
                     "<span class='REP' style='display: inline-block;'>"+element+"</span>"
-                    
-                if(question.question["BREP"].includes(element)){
-                    document.getElementById("champs_reponses").innerHTML = document.getElementById("champs_reponses").innerHTML +
-                    "<div class='BREP' hidden='true' style='display: none;'>"+element+"</div><br>"
-                }
-                else{
-                    document.getElementById("champs_reponses").innerHTML = document.getElementById("champs_reponses").innerHTML +
-                    "<div class='MREP' hidden='true' style='display: none;'>"+element+"</div><br>"
-                }
             }
-            
             console.log(question)
             console.log('ok')
         });
 
-        function get_responses(){
+        /*function get_responses(){
         li_bonne_rep = document.getElementById("numero_load").innerHTML.split(",");
         for (element in li_bonne_rep){
             li_bonne_rep[element] = li_bonne_rep[element].replace(/\D/g,'');
         }
         return li_bonne_rep;
-        }
+        }*/
 
 
         function changeState(REP){
