--- a/templates/sequence_eleve.html
+++ b/templates/sequence_eleve.html
@@ -68,7 +68,7 @@
     });
     </script>
 </head>
-<body>
+<body onload="socket.emit('acceder_q', {'id_seq':"{{id_seq| safe}}"})">
     <div class="nom">QuizTio</div>
     <ul class="menu">
         <li>
@@ -85,16 +85,13 @@
         <form action = "" method = "post">
             <h1>Question :</h1>
             <b>
-                <div id="enonce">
-            {{dictionnaire["Question"]| safe}}
+            <div id="enonce">
+
             </div></b><br><br>
 
             <div class="reponses" id="reponses">
             <div id="champs_reponses">
-            {% for rep in dictionnaire["REP"]: %}
-                <span class='REP' style="display: inline-block;">{{rep| safe}}</span>
-                {%if rep in dictionnaire["BREP"]%}
-            {%endfor%}</div>
+            </div>
             <input type="button" id="outon" onclick="envoi_rep()" value="envoi réponse" hidden="false">
             <label id="desac" hidden="true">Réponses désactivées</label>
             <input type="button" onclick="quitter()" value="Quitter">
