--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -73,6 +73,7 @@
             //afficher ou non les réponses (stats etc)
         }
         function stop_rep(){
+            console.log("stop_rep")
             socket.emit('stop_rep');
         }
         function correction(){
