--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -73,6 +73,7 @@
 
         });
         socket.on('rep', (reponse)=>{
+            console.log("reception d'une réponse : ")
             console.log(reponse)
             //for(i=0;i<reponse.length;i++){
                 //console.log(question[question.question["REP"][reponse[i]]])
