--- a/templates/sequence_prof.html
+++ b/templates/sequence_prof.html
@@ -14,12 +14,12 @@
         const socket=io();
         //socket.connect('http://'+document.domain+':'+location.port);
         id_seq='{{id_seq|safe}}'
-        id_q='{{dictionnaire["ID"]|safe}}'
+        id_q=""
         rep_direct_var=false;
         rep_bloquer=false;
         nb_rep_totale=0;
         liste_rep_eleve=[];
-
+        qcm = false;
         socket.on('nouvelle_q', (question) =>{
             console.log(question.question["Question"])
             console.log(Object.keys(question))
@@ -30,9 +30,10 @@
             i = 0;
             rep_bloquer=false;
             liste_rep_eleve=[];
+            
             for (element of question.question["REP"]){
                 liste_rep_eleve.push(0);
-                
+                qcm=true;
                 document.getElementById("champs_reponses").innerHTML = document.getElementById("champs_reponses").innerHTML +
                     "<span id='rep_num_"+i+"' class='REP' style='display: inline-block;'>"+element+"</span>"
                     
@@ -55,11 +56,15 @@
             console.log(data)
             if(! rep_bloquer){
             nb_rep_totale = nb_rep_totale+1;
+            if(qcm){
             reponse = data["reponse"];
             for (element of reponse){
                 if(element<liste_rep_eleve.length)
                 liste_rep_eleve[parseInt(element)]=liste_rep_eleve[parseInt(element)]+1
-            }
+            }}
+            else{
+                liste_rep_eleve.push(reponse[0])
+                }
             console.log(liste_rep_eleve)
             if(rep_direct_var){
                 actualiser_rep()
@@ -68,14 +73,21 @@
         }
         });
     function actualiser_rep(){
-        for (element in liste_rep_eleve){
-            document.getElementById("rep_num_"+element).style.width=liste_rep_eleve[element]/nb_rep_totale*100+"%";
-            if(document.getElementById("brep_num_"+element)==null){
-                document.getElementById("mrep_num_"+element).style.width=liste_rep_eleve[element]/nb_rep_totale*100+"%";
-            }else{
-                document.getElementById("brep_num_"+element).style.width=liste_rep_eleve[element]/nb_rep_totale*100+"%";
-            }
+        if(qcm){
+            for (element in liste_rep_eleve){
+                document.getElementById("rep_num_"+element).style.width=liste_rep_eleve[element]/nb_rep_totale*100+"%";
+                if(document.getElementById("brep_num_"+element)==null){
+                    document.getElementById("mrep_num_"+element).style.width=liste_rep_eleve[element]/nb_rep_totale*100+"%";
+                }else{
+                    document.getElementById("brep_num_"+element).style.width=liste_rep_eleve[element]/nb_rep_totale*100+"%";
                 }
+                }}
+        else{
+            for(element of liste_rep_eleve){
+            document.getElementById("champs_reponses").innerHTMl=document.getElementById("champs_reponses").innerHTMl+"<span>"+element+"</span>"
+            }
+        }
+    
     }
         socket.on('fin_seq', (question) =>{
             console.log("seq fini")
@@ -184,22 +196,15 @@
     <div class="question"><br>
         <form>
             <input type="button" onclick="suivant()" value="Suivant"><span id="nb_eleve">0</span>
-            <h1>Sequence : {{id_seq|safe}} <br> Question : {{dictionnaire["ID"]|safe}}</h1>
+            <h1>Sequence : {{id_seq|safe}} <br> Question :</h1>
             <b>
                 <div id="enonce">
-            {{dictionnaire["Question"]| safe}}
+
             </div></b><br><br>
 
             <div class="reponses" id="reponses">
             <div id="champs_reponses">
-            {% for rep in dictionnaire["REP"]: %}
-                <span id="rep_num_{{loop.index}}" class='REP' style="display: inline-block;">{{rep| safe}}</span>
-                {%if rep in dictionnaire["BREP"]%}
-                    <span id="brep_num_{{loop.index}}" class='BREP' hidden="true" style="display: none;">{{rep| safe}}</span>  
-                {% else %}
-                    <span id="nrep_num_{{loop.index}}" class='MREP' hidden="true" style="display:none;">{{rep| safe}}</span> 
-                {%endif%}<br>
-            {%endfor%}</div>
+</div>
             <input type="button" onclick="rep_direct()" value="réponses en direct">
             <input type="button" onclick="stop_rep()" value="stop réponses">
             <input type="button" onclick="correction()" value="affichage correction">
